...
import Subscription
import WebExtensions

class SettingsLegacyViewProvider: ObservableObject {

    enum StoryboardName {
        static let settings = "Settings"
        static let homeRow = "HomeRow"
        static let feedback = "Feedback"
    }

    let syncService: DDGSyncing
    let syncDataProviders: SyncDataProviders
...
