...
    /// which are groups of users categorized for experimentation or feature rollouts.
    ///
    /// - Returns: A type conforming to `FeatureFlagCohortDescribing`, or `nil` if no cohort is associated
    ///   with the feature flag.
    ///
    /// ### Example:
    /// For a feature flag with cohorts like "control" and "treatment":
    ///
    /// ```
    /// public enum ExampleFeatureFlag: FeatureFlagDescribing {
    ///     case experimentalFeature
    ///
    ///     var cohortType: (any FeatureFlagCohortDescribing.Type)? {
...
